<resources>
    <string name="app_name">Scale Fit</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_team">Team</string>
    <string name="action_drawer">Action Drawer</string>
    <string name="action_weight">Weight</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_team">Team</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_login_register">Sign in after register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_passwords_not_equal">Password does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_team4">Team4Activity</string>
    <string name="title_activity_register">Register</string>
    <string name="action_register">Register</string>
    <string name="firstName_Label">First Name</string>
    <string name="lastName_Label">Last Name</string>
    <string name="firstName_Hint">First Name</string>
    <string name="lastName_Hint">Last Name</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="dob_label">Date of Birth</string>
    <string name="user1">Andrew Barbosa</string>
    <string name="user1Email">abab@gmail.com</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="title_activity_weight_screen_activity">WeightScreen</string>
    <string name="current_weight">Current Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="take_to_weight">Weigh IN</string>
    <string name="weight_landing">Weight Tracker</string>
    <string name="weight_current">Current Weight</string>
    <string name="weight_target">Target Weight</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="btn_Register">Sign Up</string>
    <string name="login">Log In</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="eula_value">

        Scale Fit 1.0.0
\n\nCopyright (c) 2016 Team 4

\n\n*** END USER LICENSE AGREEMENT ***

\n\nIMPORTANT: PLEASE READ THIS LICENSE CAREFULLY BEFORE USING THIS SOFTWARE.

\n\n1. LICENSE

By receiving, opening the file package, and/or using Scale Fit 1.0.0("Software") containing this software, you agree that this End User User License Agreement(EULA) is a legally binding and valid contract and agree to be bound by it. You agree to abide by the intellectual property laws and all of the terms and conditions of this Agreement.

Unless you have a different license agreement signed by Team 4 your use of Scale Fit 1.0.0 indicates your acceptance of this license agreement and warranty.

Subject to the terms of this Agreement, Team 4 grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use Scale Fit 1.0.0 in accordance with this Agreement and any other written agreement with Team 4. Team 4 does not transfer the title of Scale Fit 1.0.0 to you; the license granted to you is not a sale. This agreement is a binding legal agreement between Team 4 and the purchasers or users of Scale Fit 1.0.0.

If you do not agree to be bound by this agreement, remove Scale Fit 1.0.0 from your computer now and, if applicable, promptly return to Team 4 by mail any copies of Scale Fit 1.0.0 and related documentation and packaging in your possession.

\n\n2. DISTRIBUTION

Scale Fit 1.0.0 and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of Scale Fit 1.0.0 contact Team 4.

\n\n3. USER AGREEMENT

\n\n3.1 Use

Your license to use Scale Fit 1.0.0 is limited to the number of licenses purchased by you. You shall not allow others to use, copy or evaluate copies of Scale Fit 1.0.0.

\n\n3.2 Use Restrictions

You shall use Scale Fit 1.0.0 in compliance with all applicable laws and not for any unlawful purpose. Without limiting the foregoing, use, display or distribution of Scale Fit 1.0.0 together with material that is pornographic, racist, vulgar, obscene, defamatory, libelous, abusive, promoting hatred, discriminating or displaying prejudice based on religion, ethnic heritage, race, sexual orientation or age is strictly prohibited.

Each licensed copy of Scale Fit 1.0.0 may be used on one single computer location by one user. Use of Scale Fit 1.0.0 means that you have loaded, installed, or run Scale Fit 1.0.0 on a computer or similar device. If you install Scale Fit 1.0.0 onto a multi-user platform, server or network, each and every individual user of Scale Fit 1.0.0 must be licensed separately.

You may make one copy of Scale Fit 1.0.0 for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of Scale Fit 1.0.0 . The assignment, sublicense, networking, sale, or distribution of copies of Scale Fit 1.0.0 are strictly forbidden without the prior written consent of Team 4. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of Scale Fit 1.0.0. If any person other than yourself uses Scale Fit 1.0.0 registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!

\n\n3.3 Copyright Restriction

This Software contains copyrighted material, trade secrets and other proprietary material. You shall not, and shall not attempt to, modify, reverse engineer, disassemble or decompile Scale Fit 1.0.0. Nor can you create any derivative works or other works that are based upon or derived from Scale Fit 1.0.0 in whole or in part.

Team 4\'s name, logo and graphics file that represents Scale Fit 1.0.0 shall not be used in any way to promote products developed with Scale Fit 1.0.0 . Team 4 retains sole and exclusive ownership of all right, title and interest in and to Scale Fit 1.0.0 and all Intellectual Property rights relating thereto.

Copyright law and international copyright treaty provisions protect all parts of Scale Fit 1.0.0, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for Team 4.

\n\n3.4 Limitation of Responsibility

You will indemnify, hold harmless, and defend Team 4 , its employees, agents and distributors against any and all claims, proceedings, demand and costs resulting from or in any way connected with your use of Team 4\'s Software.

In no event (including, without limitation, in the event of negligence) will Team 4 , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, Scale Fit 1.0.0 or the use or inability to use Scale Fit 1.0.0 or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.

Team 4\'s entire liability, without exception, is limited to the customers\' reimbursement of the purchase price of the Software (maximum being the lesser of the amount paid by you and the suggested retail price as listed by Team 4 ) in exchange for the return of the product, all copies, registration papers and manuals, and all materials that constitute a transfer of license from the customer back to Team 4.

\n\n3.5 Warranties

Except as expressly stated in writing, Team 4 makes no representation or warranties in respect of this Software and expressly excludes all other warranties, expressed or implied, oral or written, including, without limitation, any implied warranties of merchantable quality or fitness for a particular purpose.

\n\n3.6 Governing Law

This Agreement shall be governed by the law of the United States applicable therein. You hereby irrevocably attorn and submit to the non-exclusive jurisdiction of the courts of United States therefrom. If any provision shall be considered unlawful, void or otherwise unenforceable, then that provision shall be deemed severable from this License and not affect the validity and enforceability of any other provisions.

\n\n3.7 Termination

Any failure to comply with the terms and conditions of this Agreement will result in automatic and immediate termination of this license. Upon termination of this license granted herein for any reason, you agree to immediately cease use of Scale Fit 1.0.0 and destroy all copies of Scale Fit 1.0.0 supplied under this Agreement. The financial obligations incurred by you shall survive the expiration or termination of this license.

\n\n4. DISCLAIMER OF WARRANTY

THIS SOFTWARE AND THE ACCOMPANYING FILES ARE SOLD "AS IS" AND WITHOUT WARRANTIES AS TO PERFORMANCE OR MERCHANTABILITY OR ANY OTHER WARRANTIES WHETHER EXPRESSED OR IMPLIED. THIS DISCLAIMER CONCERNS ALL FILES GENERATED AND EDITED BY Scale Fit 1.0.0 AS WELL.

\n\n5. CONSENT OF USE OF DATA

You agree that Team 4 may collect and use information gathered in any manner as part of the product support services provided to you, if any, related to Scale Fit 1.0.0.Team 4 may also use this information to provide notices to you which may be of use or interest to you.

    </string>
    <string name="confirm_button">Confirm</string>
    <string name="height_inches">Height (inches)</string>
    <string name="height_feet">Height (Feet)</string>
    <string name="age">Age</string>
</resources>