<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="www.team4.com.scalefit.weightScreenActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/app_bar"
        android:width="150dp"
        android:textSize="30sp"
        android:text="@string/weight_landing"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:width="300dp"
        android:text="@string/weight_current"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:textSize="30sp"
        android:width="300dp"
        android:text="@string/weight_target"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:imeOptions="actionDone"
        android:editable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_centerInParent="true"
        android:imeOptions="actionDone"
        android:editable="true" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="wrap_content"
        android:layout_height="300dip"
        android:id="@+id/graph"
        android:layout_marginTop="134dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
